@@ -1,12 +1,7 @@
 use 5.006;
 use strict;
 use warnings;
-use ExtUtils::CBuilder;
 use Module::Build 0.25;
-
-my $C_support = ExtUtils::CBuilder->new->have_compiler;
-
-printf "Supports compiling C files: %s\n", $C_support ? "yes" : "no";
 
 my $builder = Module::Build->new(
 	module_name         => 'Scalar::Induce',
@@ -21,8 +16,7 @@ my $builder = Module::Build->new(
 		keywords        => [ qw/induce reduce/ ],
 	},
 	add_to_cleanup      => [ 'Scalar-Induce-*' ],
+	allow_pureperl      => 1,
 );
-
-$builder->xs_files({}) if not $C_support;
 
 $builder->create_build_script();
