@@ -6,6 +6,4 @@ copyright_year   = 2009
 
 [@LEONT]
 install_tool = mbc
-[Prereqs]
--phase = configure
-ExtUtils::CBuilder = 0
+ModuleBuild::Custom.mb_version = 0.4005
