@@ -1,6 +1,7 @@
 Revision history for Scalar-Induce
 
 {{$NEXT}}
+          Switch to using --pureperl-only
 
 0.04      2012-04-09 19:34:13 Europe/Amsterdam
           Restored pure-perl support
